--- a/otros/discos.html
+++ b/otros/discos.html
@@ -59,6 +59,12 @@
                 <a href="../disco/K-Trascender.mp3"><li>Trascender</li></a>
                 </ol>
             </div>
+            <div class="temas_portada">
+                <div class=" container-fluid">
+                    <div class="row">
+                        <img class="col-xs-12 col-sm-12 col-lg-8" src="../imagenes/portada.jpg" alt="portada del disco">
+                    </div>
+            </div>
         </aside>
     </section>
 </main>
